crates/uselesskey-core-x509-chain-negative/tests/snapshots/snapshots_chain_negative__chain_neg_all_variant_names.snap
---
source: crates/uselesskey-core-x509-chain-negative/tests/snapshots_chain_negative.rs
expression: result
---
variants:
  - "hostname_mismatch:wrong.example.com"
  - unknown_ca
  - expired_leaf
  - not_yet_valid_leaf
  - expired_intermediate
  - not_yet_valid_intermediate
  - intermediate_not_ca
  - intermediate_wrong_key_usage
  - revoked_leaf
