crates/uselesskey-core-x509-chain-negative/tests/snapshots/snapshots_chain_negative__chain_neg_expired_leaf.snap
---
source: crates/uselesskey-core-x509-chain-negative/tests/snapshots_chain_negative.rs
expression: variant_shape(&variant)
---
variant_name: expired_leaf
leaf_cn: test.example.com
root_cn: test.example.com Root CA
leaf_validity_days: 1
intermediate_validity_days: 1825
leaf_not_before_offset_days: 730
intermediate_not_before_offset_days: ~
leaf_sans_count: 1
differs_from_base: true
