crates/uselesskey-core-x509-chain-negative/tests/snapshots/snapshots_chain_negative__chain_neg_intermediate_not_ca.snap
---
source: crates/uselesskey-core-x509-chain-negative/tests/snapshots_chain_negative.rs
expression: variant_shape(&variant)
---
variant_name: intermediate_not_ca
leaf_cn: test.example.com
root_cn: test.example.com Root CA
leaf_validity_days: 3650
intermediate_validity_days: 1825
leaf_not_before: ~
intermediate_not_before: ~
intermediate_is_ca: false
intermediate_key_usage: ~
leaf_sans_count: 1
differs_from_base: true
