crates/uselesskey-core-x509-chain-negative/tests/snapshots/snapshots_chain_negative__chain_neg_revoked_leaf.snap
---
source: crates/uselesskey-core-x509-chain-negative/tests/snapshots_chain_negative.rs
expression: variant_shape(&variant)
---
variant_name: revoked_leaf
leaf_cn: test.example.com
root_cn: test.example.com Root CA
leaf_validity_days: 3650
intermediate_validity_days: 1825
leaf_not_before_offset_days: ~
intermediate_not_before_offset_days: ~
leaf_sans_count: 1
differs_from_base: false
